[package]
name = "clone3"
version = "0.2.3" # remember to update readme and html_root_url
edition = "2021"

authors = ["Valentin Kettner <vakevk@gmail.com>"]
categories = ["os::linux-apis"]
description = "Rust bindings to the clone3 linux system call"
include = ["/Cargo.toml", "/src"]
keywords = ["clone", "clone3", "linux", "syscall"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/e00E/clone3"

[features]
# Each newer version depends on the previous version. When adding a new version remember to add it
# to CI and the documentation.
default = ["linux_5-7"]
linux_5-5 = []
linux_5-7 = ["linux_5-5"]

[dependencies]
bitflags = { version = "1.0", default-features = false }
uapi = { version = "0.2", default-features = false }
